--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "^16.9.2",
@@ -37,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/react-test-renderer": "^16.9.0",
     "enzyme-adapter-react-16": "^1.14.0"
   }
 }
